added root styling

--- a/index-START.html
+++ b/index-START.html
@@ -21,7 +21,12 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
-
+    :root {
+      --spacing: 10px;
+      --blur: 10px;
+      --base: #ffc600;
+    }
+    
     /*
       misc styles, nothing to do with CSS variables
     */
